Update solrCloud.md